--- a/WebModule/pom.xml
+++ b/WebModule/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>WebModule</artifactId>
+    <artifactId>WebModule1</artifactId>
 
 
     <repositories>
